--- a/index.html
+++ b/index.html
@@ -6,57 +6,22 @@
     <title>Kelas Online</title>
   </head>
   <body>
-    <h1>Kelas Popular</h1>
-    <img height="400" src="images/office.png" alt="Kelas thumbnail kelas bwa" />
-
-    <p>
-      Kelas BWAFWD adalah kelas Full-Stack Web Developer dan juga Web Designer
-      yang di mana kita akan mempelajari UX design, UI design, Website
-      Development dengan Bootstrap dan Laravel
-    </p>
-    <p>
-      Jika saat ini kamu sedang bingung untuk fokus kepada karir apa maka kelas
-      ini cocok sekali karena kamu akan mempelajari banyak bidang.
-    </p>
-    <p>
-      Setelah menyelesaikan kelas ini kamu dapat memilih apa yang akan kamu
-      fokuskan sesuai dengan materi pada kelas BWAFWD.
-    </p>
-    <h3>Materi Kelas</h3>
-    <ol>
-      <li>
-        Warming up
-        <ul>
-          <li>Perkenalan</li>
-          <li>Riset Pertama</li>
-        </ul>
-      </li>
-      <li>
-        Installation
-        <ul>
-          <li>Adobe XD</li>
-          <li>Google Chrome</li>
-        </ul>
-      </li>
-      <li>
-        Practice
-        <ul>
-          <li>Index html</li>
-          <li>Header dan SEO</li>
-        </ul>
-      </li>
-    </ol>
-
-    <h3>Tools Kelas</h3>
-    <ul>
-      <li>
-        Adobe XD -
-        <a
-          target="_blank"
-          href="https://www.buildwithangga.com/kelas/full-stack-web-developer"
-          >Download</a
-        >
-      </li>
-    </ul>
+    <section>
+      <h1>Kelas Popular</h1>
+      <p>
+        Kelas BWAFWD adalah kelas Full-Stack Web Developer dan juga Web Designer
+        yang di mana kita akan mempelajari UX design, UI design, Website
+        Development dengan Bootstrap dan Laravel
+      </p>
+    </section>
+    <section>
+      <h1>Fitur Unggulan</h1>
+      <h3>Offline-Mode</h3>
+      <p>Dapat diakses ketika tidak menggunakan internet.</p>
+      <h3>Offline-Mode</h3>
+      <p>Dapat diakses ketika tidak menggunakan internet.</p>
+      <h3>Offline-Mode</h3>
+      <p>Dapat diakses ketika tidak menggunakan internet.</p>
+    </section>
   </body>
 </html>
