--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <title>Kelas Online</title>
   </head>
   <body>
+    <nav>
+      <ul>
+        <li>
+          <a href="#">Home</a>
+        </li>
+        <li>
+          <a href="features.html">Features</a>
+        </li>
+        <li>
+          <a href="#">Pricing</a>
+        </li>
+        <li>
+          <a href="#"> Log in</a>
+        </li>
+      </ul>
+    </nav>
     <section>
       <h1>Kelas Popular</h1>
       <p>
