--- a/features.html
+++ b/features.html
@@ -22,5 +22,11 @@
         </li>
       </ul>
     </nav>
+
+    <footer>
+      <p>
+        © 2019 - 2020 BuildWith Angga • All rights reserved • Love from Jakarta
+      </p>
+    </footer>
   </body>
 </html>
