--- a/index.html
+++ b/index.html
@@ -39,5 +39,11 @@
       <h3>Offline-Mode</h3>
       <p>Dapat diakses ketika tidak menggunakan internet.</p>
     </section>
+
+    <footer>
+      <p>
+        © 2019 - 2020 BuildWith Angga • All rights reserved • Love from Jakarta
+      </p>
+    </footer>
   </body>
 </html>
