--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <nav>
+      <p>
+        Kelas Online
+      </p>
       <ul>
         <li>
           <a href="#">Home</a>
@@ -32,12 +35,18 @@
     </section>
     <section>
       <h1>Fitur Unggulan</h1>
-      <h3>Offline-Mode</h3>
-      <p>Dapat diakses ketika tidak menggunakan internet.</p>
-      <h3>Offline-Mode</h3>
-      <p>Dapat diakses ketika tidak menggunakan internet.</p>
-      <h3>Offline-Mode</h3>
-      <p>Dapat diakses ketika tidak menggunakan internet.</p>
+      <div>
+        <h3>Offline-Mode</h3>
+        <p>Dapat diakses ketika tidak menggunakan internet.</p>
+      </div>
+      <div>
+        <h3>Konsultasi</h3>
+        <p>Belajar dan diskusi dengan mentor langsung dari Group private.</p>
+      </div>
+      <div>
+        <h3>Sertifikat</h3>
+        <p>Mempermudah mendapatkan pekerjaan tambahan dengan hasil karya.</p>
+      </div>
     </section>
 
     <footer>
