--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a href="#">Pricing</a>
         </li>
         <li>
-          <a href="#"> Log in</a>
+          <a href="login.html"> Log in</a>
         </li>
       </ul>
     </nav>
@@ -36,15 +36,26 @@
     <section>
       <h1>Fitur Unggulan</h1>
       <div>
-        <h3>Offline-Mode</h3>
-        <p>Dapat diakses ketika tidak menggunakan internet.</p>
+        <h3><font color="68b0ab">Offline-Mode</font></h3>
+        <p>
+          Dapat diakses ketika tidak terhubung dengan
+          <strong> koneksi internet.</strong>
+        </p>
       </div>
       <div>
-        <h3>Konsultasi</h3>
+        <h3>
+          <font color="d54062">
+            Konsultasi
+          </font>
+        </h3>
         <p>Belajar dan diskusi dengan mentor langsung dari Group private.</p>
       </div>
       <div>
-        <h3>Sertifikat</h3>
+        <h3>
+          <font color="ffa36c">
+            Sertifikat
+          </font>
+        </h3>
         <p>Mempermudah mendapatkan pekerjaan tambahan dengan hasil karya.</p>
       </div>
     </section>
