--- a/features.html
+++ b/features.html
@@ -18,7 +18,7 @@
           <a href="#">Pricing</a>
         </li>
         <li>
-          <a href="#"> Log in</a>
+            <a href="login.html"> Log in</a>
         </li>
       </ul>
     </nav>
